--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,8 @@
   <!-- Search Button And Search Input -->
   <div class="search__container">
     <form action="#" method="POST">
-      <input class="search__input" type="url" pattern="https://.*" placeholder="Search" required>
+
+      <input class="search__input" type="url" pattern="https://.*" placeholder="Type your URL with https:// " required>
 
       <button type="submit" class="button" id="button-7">
         <div id="dub-arrow"><img src="/img/arrow.png" alt="" /></div>
