--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,9 +32,7 @@
   <!-- Search Button And Search Input -->
   <div class="search__container">
     <form action="#" method="POST">
-
-      <input class="search__input" type="url" pattern="https://.*" placeholder="Type your URL with https:// " required>
-
+      <input class="search__input" type="url" pattern="https://.*" placeholder="Type your URL with https:// " oninvalid="setCustomValidity('Your url must include http or https ')" required>
       <button type="submit" class="button" id="button-7">
         <div id="dub-arrow"><img src="/img/arrow.png" alt="" /></div>
         <a href="#">Let's Go!</a>
